[package]
name = "gossip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "unique-id"
path = "src/bin/unique-id.rs"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0"
